2008-08-06  Johan Dahlin  <johan@gnome.org>

	* glib/pyglib.c (pyglib_init):
	return in case of error instead of trying to access the internal
	types.

2008-08-06  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gio/gio.override: Add 'pygio_do_icon_richcompare' prototype to
	header.
	(_wrap_g_file_icon_tp_repr, _wrap_g_themed_icon_tp_repr): Fix
	return value type in signature.

2008-08-05  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 546135 – GIcon and implementations improvements

	* gio/gio-types.defs (FileIcon): New 'define-object'.

	* gio/gio.override (pygio_do_icon_richcompare)
	(_wrap_g_icon_tp_richcompare, _wrap_g_icon_tp_hash)
	(_wrap_g_file_icon_tp_richcompare, _wrap_g_file_icon_tp_hash)
	(_wrap_g_file_icon_tp_repr, _wrap_g_themed_icon_tp_richcompare)
	(_wrap_g_themed_icon_tp_hash, _wrap_g_themed_icon_tp_repr): New
	functions.

2008-08-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 546046 – Wrap GFile.replace_async and query_info_async

	* tests/test_gio.py:
	* gio/gfile.override:
	* gio/gio.defs:
	Wrap GFile.replace_async and query_info_async with docs and test.

2008-08-03  Paul Pogonyshev  <pogonyshev@gmx.net>

	* glib/pyglib.h:
	* glib/pyglib.c (pyglib_enable_threads): Change return value from
	'gboolean' to 'int' and changed semantics to Pythonic: restores
	backwards compatibility.

	* gobject/gobjectmodule.c (pyg_threads_init): Treat return value
	accordingly (bug #544946).

2008-08-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 546020 – Wrap GFile.create_async

	* tests/test_gio.py:
	* gio/gfile.override:
	* gio/gio.defs:
	Wrap GFile.create_async with docs and test

2008-08-02  Johan Dahlin  <johan@gnome.org>

	* codegen/docgen.py:
	Remove SGML support, require python 2.4, modernize,
	PEP-8ify. Make it run on gio.

	* codegen/definitions.py:
	Make property iterable

	* gio/gio.defs:
	Include the gio-types.defs file.

2008-08-02  Johan Dahlin  <johan@gnome.org>

	* glib/glibmodule.c (pyglib_set_prgname):