@@ -1,5 +1,13 @@
 2008-08-06  Johan Dahlin  <johan@gnome.org>
 
+	* glib/pyglib.c (pyglib_enable_threads):
+	* gobject/gobjectmodule.c (pyg_threads_init),
+	(pygobject_enable_threads):
+	Add a pygobject_enable_threads wrapper around pyglib_threads_enable
+	and return 0/-1 which existing gobject based applications expect.
+
+2008-08-06  Johan Dahlin  <johan@gnome.org>
+
 	* glib/pyglib.c (pyglib_init):
 	return in case of error instead of trying to access the internal
 	types.
